# advdef-train

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: README.md  resnet50_transfer.yaml  resnet50_transfer_10k.yaml
training/: __init__.py  cache_defense.py  config.py  data.py  data_prep.py  defenses.py  engine.py  preprocess.py  train.py  transforms.py
